@@ -3,6 +3,7 @@
    reads with dynamic snitch + read repair disabled (CASSANDRA-2870)
  * support spaces in path to log4j configuration (CASSANDRA-2383)
  * avoid including inferred types in CF update (CASSANDRA-2809)
+ * fix re-using index CF sstable names after drop/recreate (CASSANDRA-2872)
 
 
 0.7.7
